# wasm-orchestration-with-spin

./: .gitignore  Cargo.toml  Makefile  README.md  crt.pem  install-docker.sh  spin.sig
.devcontainer/: Dockerfile  bootstrap.sh  daemon.json  devcontainer.json  kube.config
.devcontainer/library-scripts/: docker-in-docker-debian-old.sh  docker-in-docker-debian.sh
.github/actions/: PR.yaml
.github/actions/build-devcontainer/: action.yaml
.github/workflows/: CI.yml  PR.yaml  Release.yaml  build-devcontainer.yaml
apps/artifacts/: runtime.yaml
apps/entry/: Cargo.toml  Dockerfile  Makefile  deploy.yaml  spin.toml
apps/entry/src/: lib.rs
apps/eventprocessor/: Cargo.toml  Dockerfile  deploy.yaml  spin.toml
apps/fulfilmentprocessor/: Cargo.toml  Dockerfile  Makefile  deploy.yaml  spin.toml
apps/fulfilmentprocessor/src/: lib.rs
apps/mqtt/fulfilmentprocessor/: Cargo.toml  Dockerfile  spin.toml
apps/mqtt/fulfilmentprocessor/src/: lib.rs
apps/mqtt/orderprocessor/: Cargo.toml  Dockerfile  Makefile  spin.toml
apps/mqtt/orderprocessor/receiver/: Cargo.toml
apps/mqtt/orderprocessor/src/: lib.rs
apps/mqtt/orderprocessor/statusprovider/: Cargo.toml
apps/orderprocessor/: Dockerfile  Makefile  deploy.yaml  service.yaml  spin.toml
apps/orderprocessor/receiver/: Cargo.toml
apps/orderprocessor/receiver/src/: lib.rs
apps/orderprocessor/statusprovider/: Cargo.toml  Makefile
apps/orderprocessor/statusprovider/src/: lib.rs
apps/redis/fulfilmentprocessor/: Cargo.toml  Dockerfile  Makefile  spin.toml
apps/redis/orderprocessor/: Cargo.toml  Dockerfile  Makefile  service.yaml  spin.toml
apps/redis/orderprocessor/receiver/: Cargo.toml
apps/runtime/: runtime.yaml
apps/shared/orderstatusprovider/: Cargo.toml  Dockerfile  Makefile  deploy.yaml  service.yaml  spin.toml
crates/order-management/: Cargo.toml
crates/order-management/src/: lib.rs
deployment/: Makefile  build-deploy-workload.sh  build-push-workload-image.sh  build-save-workload-image.sh  core-infrastructure-local.ps1  core-infrastructure-local.sh  core-infrastructure.ps1  deploy-workload.sh  get-describe-pod.sh  makefile  redis-pod.yaml  save-image.sh  wasm-runtimeclass.yaml
deployment/agent/: vmgithubagentubuntukeypair.pem
deployment/mosquitto/: values.yaml
deployment/mosquitto/templates/: service.yaml
deployment/redis-stack/: service.yaml
docs/: adrs.md  ci.md  concepts.md  dev.md  orchestrator-plugin  orchestrator-plugin.md  wasm-on-k8s.md
tests/: Cargo.toml
tests/src/: common.rs  lib.rs  main.rs
wasm-shims/: Cargo.toml
wasm-shims/.devcontainer/: bootstrap.sh  devcontainer.json
wasm-shims/containerd-shim-wws-v1/: Cargo.toml
wasm-shims/deployments/k3d/: config.toml.tmpl
wasm-shims/tests/common/: mod.rs
(+5 files in other folders)
