[workspace]
# If more Spin apps are added to the solution, they should be referenced here.
members = [    
    "apps/mqtt/orderprocessor",
    "apps/mqtt/fulfilmentprocessor",
    "apps/redis/orderprocessor",
    "apps/redis/fulfilmentprocessor",
    "apps/shared/orderstatusprovider",
    "crates/order-management",
]
resolver = "2"