[package]
name = "integrationtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.82.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
http = "0.2"
tower = "0.4"
hyper = "0.14"
curl = "0.4"
rand = "0.8"
url = "2.4.0"
# serde-json is a crate to serialize and deserialize JSON.
serde_json = "1"
# serde is a crate to provide serialize and deserialize traits for JSON.
serde = {version = "*", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
# Crate that contains shared order management entities.
order-management = { path = "../crates/order-management" }

[workspace]