[package]
name = "fulfilmentprocessor"
authors = ["Suneet Nangia <suneetnangia@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# serde-json is a crate to serialize and deserialize JSON.
serde_json = "1"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.2.1" }
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
